--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como a edição de genes está transformando a Medicina?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/x-icon" href="rect1.png">
 </head>
 <body>
     <div class="espacoEsquerdo">
         <div class="espacoPreto"></div>
+        <div class="espacofinal"></div>
     </div>
 
     <div class="pagina">
 
         <div class="barraNav">
             <img src="opcoes.svg" class="logoCNN" alt="opcoes">
-            <img src="log-cnn-brasil-transparent.svg" class="logoCNN" alt="Logo CNN Brasil">
+            <a href="https://www.cnnbrasil.com.br/"><img src="log-cnn-brasil-transparent.svg" class="logoCNN" alt="Logo CNN Brasil"></a>
             <ul class="listaPreto">
-                <li class="topicosPreto">Política</li>
-                <li class="topicosPreto">Economia</li>
-                <li class="topicosPreto">Esportes</li>
-                <li class="topicosPreto">Pop</li>
-                <li class="topicosPreto">Viagem & Gastronomia</li>
+                <a href="https://www.cnnbrasil.com.br/politica/"><li class="topicosPreto">Política</li></a>
+                <a href="https://www.cnnbrasil.com.br/economia/"><li class="topicosPreto">Economia</li></a>
+                <a href="https://www.cnnbrasil.com.br/esportes/"><li class="topicosPreto">Esportes</li></a>
+                <a href="https://www.cnnbrasil.com.br/pop/"><li class="topicosPreto">Pop</li></a>
+                <a href="https://www.cnnbrasil.com.br/viagemegastronomia/"><li class="topicosPreto">Viagem & Gastronomia</li></a>
             </ul>
         </div>
 
@@ -31,7 +33,7 @@
                 <p class="descricao">As edições de genes podem revolucionar a medicina por serem capazes de alterar as células humanas, tratando doenças genéticas, infecções e outras condições até então irreparáveis.</p>
                 <img src="edicaoDNA.jpg" alt="Imagem Edição de DNA vetor">
                 <p class="textImg">IMAGE IBERDROLA® S.A.</p>
-                <p class="nome"><span style="font-weight: bold; text-decoration: underline;">J. Jonah Jameson</span>, da CNN</p>
+                <p class="nome"><span style="font-weight: bold; text-decoration: underline;">João Pedro e Murilo</span>, da EEEMPA</p>
                 <p class="hora">14/05/2024 às 13:45 | Atualizado 14/05/2024 às 13:46</p>
 
                 <p class="textoArtigo">A edição de genes, uma das tecnologias mais revolucionárias do século XXI, está remodelando profundamente o campo da medicina. Desde a descoberta do CRISPR-Cas9, uma ferramenta que permite a alteração precisa do DNA, pesquisadores e médicos têm explorado suas possibilidades para tratar doenças genéticas, combater infecções e até mesmo prevenir condições antes consideradas inevitáveis.
@@ -52,17 +54,108 @@
             <div class="maisLidas">
                 <h3>Mais lidas</h3>
                 <ol>
-                    <li>Libertadores 2024: veja os confrontos das oitavas de final</li> 
-                    <li>Atriz de "Renascer" sofre transfobia por celebrar 1º xixi após cirurgia</li>
-                    <li>"Caminhamos para uma nova crise fiscal com desemprego e recessão", diz Paulo Tafner</li>
-                    <li>Virginia comemora 7º mês de gestação e relata: "Cansando mais rápido"</li>
-                    <li>Quem é Claudia Sheinbaum, primeira mulher eleita presidente do México?</li>
-                    <li>Aviadores desaparecidos no Dia D podem ter sido encontrados após 80 anos</li>
-                    <li>Resultados preliminares apontam Claudia Sheinbaum como vencedora das eleições no México</li>
-                    <li>Sul-Americana 2024: veja como ficaram os jogos das oitavas de final</li>
-                    <li>Nível do Guaíba volta a subir e inunda ruas de Porto Alegre; veja imagens</li>
-                    <li>Integrantes do ABBA se reúnem para receber prêmio na Suécia</li>
+                    <a href="https://www.cnnbrasil.com.br/esportes/futebol/libertadores-2024-veja-os-confrontos-das-oitavas-de-final/"><li>Libertadores 2024: veja os confrontos das oitavas de final</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/entretenimento/atriz-de-renascer-sofre-transfobia-por-celebrar-1o-xixi-apos-cirurgia/"><li>Atriz de "Renascer" sofre transfobia por celebrar 1º xixi após cirurgia</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/entretenimento/virginia-comemora-7o-mes-de-gestacao-e-relata-cansando-mais-rapido"><li>Virginia comemora 7º mês de gestação e relata: "Cansando mais rápido"</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/economia/macroeconomia/caminhamos-para-uma-nova-crise-fiscal-com-desemprego-e-recessao-diz-paulo-tafner/"><li>"Caminhamos para uma nova crise fiscal com desemprego e recessão", diz Paulo Tafner</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/internacional/quem-e-claudia-sheinbaum-primeira-mulher-eleita-presidente-do-mexico/"><li>Quem é Claudia Sheinbaum, primeira mulher eleita presidente do México?</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/internacional/aviadores-desaparecidos-no-dia-d-podem-ter-sido-encontrados-apos-80-anos/"><li>Aviadores desaparecidos no Dia D podem ter sido encontrados após 80 anos</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/nacional/nivel-do-guaiba-volta-a-subir-e-inunda-ruas-de-porto-alegre-veja-imagens/"><li>Nível do Guaíba volta a subir e inunda ruas de Porto Alegre; veja imagens</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/internacional/resultados-preliminares-apontam-claudia-sheinbaum-como-vencedora-das-eleicoes-no-mexico/"><li>Resultados preliminares apontam Claudia Sheinbaum como vencedora das eleições no México</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/esportes/futebol/futebol-internacional/sul-americana-2024-jogos-oitavas-de-final/"><li>Sul-Americana 2024: veja como ficaram os jogos das oitavas de final</li></a>
+
+                    <a href="https://www.cnnbrasil.com.br/saude/curcuma-veja-8-beneficios-e-como-consumir/"><li>Cúrcuma: veja 8 benefícios e como consumir</li></a>
+
                 </ol>
+            </div>
+        </div>
+
+        <div class="rodape">
+            <div class="divisaoRodape logoZona">
+                <a href="https://www.cnnbrasil.com.br/"><img src="log-cnn-brasil-transparent.svg" class="logoZonaImg" alt="opcoes"></a>
+            </div>
+
+            <div class="divisaoRodape">
+                <p>CNN Brasil.<br>
+                    Pense bem, pense CNN.</p>
+
+                <p>MAIS</p>
+                <a href="https://www.cnnbrasil.com.br/"><ul>
+                    <li>Equipe CNN Brasil</li>
+                    <li>Grade de Programação</li>
+                    <li>Fórum CNN</li>
+                    <li>Colunistas</li>
+                    <li>Newsletters</li>
+                    <li>Mapa do site</li>
+                    <li>Distribuição do Sinal</li>
+                </ul></a>
+            </div>
+
+            <div class="divisaoRodape">
+                <p>EDITORIAIS</p>
+                <a href="https://www.cnnbrasil.com.br/"><ul>
+                    <li>Ao Vivo</li>
+                    <li>Política</li>
+                    <li>Nacional</li>
+                    <li>Economia</li>
+                    <li>Internacional</li>
+                    <li>Entretenimento</li>
+                    <li>Esportes</li>
+                    <li>Saúde</li>
+                    <li>Tecnologia</li>
+                    <li>Viagem & Gastronomia</li>
+                    <li>LifeStyle</li>
+                </ul></a>
+            </div>
+
+            <div class="divisaoRodape">
+                <p>POLÍTICA</p>
+                <a href="https://www.cnnbrasil.com.br/"><ul>
+                    <li>Eleições 2024</li>
+                    <li>Governo Lula</li>
+                    <li>Câmara dos Deputados</li>
+                    <li>Senado Federal</li>
+                    <li>Supremo Tribunal Federal</li>
+                    <li>Políticas Públicas</li>
+                </ul></a>
+            </div>
+
+            <div class="divisaoRodape">
+                <p>NACIONAL</p>
+                <a href="https://www.cnnbrasil.com.br/"><ul>
+                    <li>Educação</li>
+                    <li>Segurança</li>
+                    <li>Clima</li>
+                    <li>Meio Ambiente</li>
+                    <li>Auxílio Brasil</li>
+                    <li>São Paulo</li>                    
+                    <li>Rio de Janeiro</li>
+                    <li>Minas Gerais</li>
+                    <li>Brasília</li>
+                </ul></a>
+            </div>
+
+            <div class="divisaoRodape ultimorodape">
+                <p>ECONOMIA</p>
+                <a href="https://www.cnnbrasil.com.br/"><ul>
+                    <li>Mercado</li>
+                    <li>Investimentos</li>
+                    <li>Cotações</li>
+                    <li>Banco Central</li>
+                    <li>Bolsa de Valores</li>
+                    <li>Imposto de Renda</li>                    
+                    <li>Finanças Pessoais</li>
+                    <li>Loterias</li>
+                    <li>Sustentabilidade</li>
+                </ul></a>
             </div>
 
         </div>
@@ -70,6 +163,7 @@
 
     <div class="espacoDireito">
         <div class="espacoPreto"></div>
+        <div class="espacofinal"></div>
     </div>
 
 
